# algorithm_verification

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_ISTA_quad_extractor.py  test_quad_extractor.py
.devcontainer/: devcontainer.json  startup.sh
GD/: GD_PEP.py  GD_l1.py
ISTA/: ISTA_PEP_Gurobi_formulation.py  ISTA_PEP_SDP_relaxation.py  ISTA_PEP_formulation.py  soft_threshold_optimality_test.py
NNLS/: NNLS_KKT_PEP_SDP.py  NNLS_PEP_Gurobi_formulation.py  NNLS_PEP_SDP_relaxation.py  hardcoded_NNLS_PEP_SDP_relaxation.py  relu_SDP_qcqp_tests.py  relu_global_QC_test.py  relu_optimality_test.py  relu_qcqp_test.py
OSQP/: OSQP_ADMM_PEP.py  lu_box_proj_test.py
PEPit_comp/: pepit_comp.py  test_basic_pepit.py
algocert/: __init__.py  certification_problem.py  settings.py
algoverify/: __init__.py  settings.py  verification_problem.py
certification_problem/: __init__.py  algorithm.py  certification_problem.py
paper_experiments/: pep_MWE.py  pep_mwe_issue.md  pep_test.csv  pep_test.py  round_data.py
qcqp2quad_form/: qcqp2symbolic_qcqp.py  quad_extractor.py
quadratic_functions/: 3d_quadfun_middle_eig.py  extended_slemma_quadpep.py  extended_slemma_sdp.py  generate_quadratic_function.py  gradient_descent.py  initial_iterate_dist.py  l_inf_ball_test.py  linesearch_initcond_tests.py  linesearch_test.py  quad_pep_slemma.py  quadfun_pep_program.py  test_extended_slemma_functions.py
sdp_admm/: test_admm.py  test_full_admm.py
tests/: test_GD_ADMM.py  test_ISTA_quad_extractor.py  test_UQP.py  test_basic_GD.py  test_basic_quad_extractor.py  test_cgal.py  test_chordal_admm.py  test_job_scheduling_qcqp.py  test_l1_tightness.py  (+3 more)
(+981 files in other folders)
