[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "algocert"
description="A package for algorithm performance certification."
license = {text = "Apache 2.0"}
version = "0.0.1"
authors = [
{name = "Vinit Ranjan", email="vranjan@princeton.edu"},
{name = "Bartolomeo Stellato", email="bstellato@princeton.edu"}
]
dependencies = [
    "cvxpy >= 1.2.0",
    "gurobipy",
    "Mosek",
    "jax",
    "jaxlib",
    "matplotlib
]

[tool.setuptools]
packages = ["algocert"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "python-lsp-server[all]"]

[tool.pytest.ini_options]
addopts = ["--ignore=tests/old_tests/"]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
